--- a/views/res_config_settings_views.xml
+++ b/views/res_config_settings_views.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="point_of_sale.res_config_settings_view_form" />
         <field name="arch" type="xml">
             <block id="pos_interface_section" position="after">
-                <block title="Factura Electrónica" id="pos_einvoice_section">
+                <block string="Factura Electrónica" id="pos_einvoice_section">
                     <div class="row mt16 o_settings_container">
                         <div class="col-12 col-lg-6 o_setting_box">
                             <div class="o_setting_left_pane">
@@ -29,7 +29,7 @@
                                 <field name="pos_receipt_customer_vat"/>
                             </div>
                             <div class="o_setting_right_pane">
-                                <label string="Mostrar Cuit del Cliente" for="pos_receipt_customer_vat" class="col-lg-4 o_light_label"/>
+                                <label string="Mostrar CUIT del Cliente" for="pos_receipt_customer_vat" class="col-lg-4 o_light_label"/>
                             </div>
                         </div>
                         <div class="col-12 col-lg-6 o_setting_box">
@@ -44,7 +44,7 @@
                             <div class="o_setting_left_pane">
                             </div>
                             <div class="o_setting_right_pane">
-                                <label for="pos_default_partner_id"/>
+                                <label for="pos_default_partner_id" string="Cliente por defecto"/>
                                 <div class="text-muted">
                                     Cliente por defecto.
                                 </div>
